Switch wasm version to black background

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -6,7 +6,7 @@
       display: flex;
       align-items: flex-start;
       justify-content: center;
-      background-color: silver;
+      background-color: black;
       }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" type='text/css'>
@@ -14,7 +14,5 @@
     <script src='./rot.js/rot.min.js'></script>
     <script src='./index.js'></script>
   </head>
-  <body onload="initDisplay();">
-    <div style="font-family:'Ubuntu Mono'" id="loadingDiv">Loading...</div>
-  </body>
+  <body onload="initDisplay();"></body>
 </html>
