Tweaking index.html for reasons

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -9,10 +9,11 @@
       background-color: black;
       }
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" type='text/css'>
-    <script src='./scavenger_wasm.js'></script>
-    <script src='./rot.js/rot.min.js'></script>
-    <script src='./index.js'></script>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" type="text/css">
+    <link href="./scavenger_wasm_bg.wasm" rel="preload" as="fetch" crossorigin="anonymous">
+    <script src="./scavenger_wasm.js"></script>
+    <script src="./rot.js/rot.min.js"></script>
+    <script src="./index.js"></script>
   </head>
   <body onload="initDisplay();"></body>
 </html>
